[package]
name = "adafruit-seesaw"
version = "0.9.0"
authors = ["Alex Eden <alexandereden91@gmail.com>"]
edition = "2021"
description = "Platform-agnostic implementation for communicating with devices that run the Seesaw firmware."
documentation = "https://docs.rs/adafruit-seesaw"
categories = ["embedded", "no-std"]
keywords = ["shared-bus", "seesaw", "adafruit", "i2c", "embedded"]
exclude = ["/.cargo", "/.rustfmt.toml"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexeden/adafruit-seesaw"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
std = []

[lib]
bench = false
test = false

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
heapless = "0.8"
rtt-target = { version = "0.6" }
stm32f4xx-hal = { features = ["stm32f405", "sdio"], version = "0.20" }

[profile.release]
codegen-units = 1
debug = true
lto = true
incremental = false
opt-level = 's'
