[package]
name = "adafruit-seesaw"
version = "0.12.1"
authors = ["Alex Eden <alexandereden91@gmail.com>"]
edition = "2021"
description = "Platform-agnostic implementation for communicating with devices that run the Seesaw firmware."
documentation = "https://docs.rs/adafruit-seesaw"
categories = ["embedded", "no-std"]
keywords = ["shared-bus", "seesaw", "adafruit", "i2c", "embedded"]
exclude = ["/.cargo", "/.rustfmt.toml"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexeden/adafruit-seesaw"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = [
    "device_arcade_button_1x4",
    "device_neokey_1x4",
    "device_neorotary4",
    "device_neoslider",
    "device_neotrellis",
    "device_rotary_encoder",

    "module_adc",
    "module_encoder",
    "module_gpio",
    "module_timer",
]

nightly = [
    "device_arcade_button_1x4",
    "device_neokey_1x4",
    "device_neorotary4",
    "device_neoslider",
    "device_neotrellis",
    "device_rotary_encoder",

    "module_keypad",
    "module_neopixel",
]

# devices only depend on the modules which they absolutely need for the basics to work
device_arcade_button_1x4 = ["module_gpio", "module_timer"]
device_neokey_1x4 = ["module_gpio"]
device_neorotary4 = ["module_gpio", "module_encoder"]
device_neoslider = ["module_adc", "module_gpio"]
device_neotrellis = ["module_keypad"]
device_rotary_encoder = ["module_encoder", "module_gpio"]

module_adc = []
module_encoder = ["module_gpio"]
module_gpio = []
module_keypad = []
module_neopixel = []
module_timer = []

defmt = ["dep:defmt"]

[lib]
bench = false
test = false

[dependencies]
embedded-hal = "1.0.0"
rgb = "0.8.50"
defmt = { version = "1", optional = true }

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal-bus = "0.3"
heapless = "0.8"
rtt-target = { version = "0.6" }
stm32f4xx-hal = { features = ["stm32f405", "sdio"], version = "0.22" }

[profile.release]
codegen-units = 1
debug = true
lto = true
incremental = false
opt-level = 's'
